--- a/fhiso.sty
+++ b/fhiso.sty
@@ -53,7 +53,7 @@
 \setlist[enumerate]{noitemsep, topsep=0pt}
 
 % Title page
-\renewcommand{\maketitle}{
+\newcommand{\fhisotitle}{
 \thispagestyle{empty}
 \begin{center}
 
@@ -66,3 +66,10 @@
 \vspace{1em}
 \end{center}
 }
+
+% The 'bidi' package redefines \maketitle (which also breaks the 'titling'
+% package).  This defines it back to \fhisotitle.
+% Unfortunately we can't just import 'bidi' now, because it needs to be
+% imported after a bunch of other stuff in the template.
+\newcommand{\fhisoFinal}{\renewcommand{\maketitle}{\fhisotitle}}
+
