--- a/fhiso.sty
+++ b/fhiso.sty
@@ -82,6 +82,8 @@
 \usepackage{etoolbox}
 \preto{\@verbatim}{\topsep=0pt \partopsep=0pt }
 
+\renewcommand{\quote}{\list{}{\rightmargin=\leftmargin\topsep=0pt}\item\relax}
+
 % Classes that are inserted by pclasses.pl
 % They're done in this roundabout way so that the use of an undefined 
 % class doesn't prevent compilation of the document.
