--- a/fhiso.sty
+++ b/fhiso.sty
@@ -5,6 +5,20 @@
 \setsansfont{Noto Sans}
 \setmonofont{Noto Mono}
 
+% Noto fonts don't include small caps support.  This fakes it.
+% http://tex.stackexchange.com/a/225078/16883
+\renewcommand\textsc[1]{\fauxschelper#1 \relax\relax}
+\def\fauxschelper#1 #2\relax{%
+  \fauxschelphelp#1\relax\relax%
+  \if\relax#2\relax\else\ \fauxschelper#2\relax\fi%
+}
+\def\Hscale{.87}\def\Vscale{.75}\def\Cscale{1.00}
+\def\fauxschelphelp#1#2\relax{%
+  \ifnum`#1>``\ifnum`#1<`\{\scalebox{\Hscale}[\Vscale]{\uppercase{#1}}\else%
+    \scalebox{\Cscale}[1]{#1}\fi\else\scalebox{\Cscale}[1]{#1}\fi%
+  \ifx\relax#2\relax\else\fauxschelphelp#2\relax\fi}
+
+
 % Arabic support
 \usepackage{ucharclasses}
 \usepackage{ifthen}
@@ -54,8 +68,9 @@
 }
 
 \usepackage{enumitem}
-\setlist[itemize]{noitemsep, topsep=0pt, label=---}
-\setlist[enumerate]{noitemsep, topsep=0pt}
+\setlist[itemize]{noitemsep, topsep=0pt, itemsep=0pt, parsep=0pt, label=---}
+\setlist[enumerate]{noitemsep, topsep=0pt, itemsep=0pt, parsep=0pt}
+\setlist[description]{style=nextline, topsep=0pt, itemsep=0.5em, parsep=0pt}
 
 % Title page
 \newcommand{\fhisotitle}{
@@ -72,11 +87,17 @@
 \end{center}
 }
 
-% The 'bidi' package redefines \maketitle (which also breaks the 'titling'
-% package).  This defines it back to \fhisotitle.
-% Unfortunately we can't just import 'bidi' now, because it needs to be
-% imported after a bunch of other stuff in the template.
-\newcommand{\fhisoFinal}{\renewcommand{\maketitle}{\fhisotitle}}
+\newcommand{\fhisoFinal}{%
+  % The 'bidi' package redefines \maketitle (which also breaks the 'titling'
+  % package).  This defines it back to \fhisotitle.
+  % Unfortunately we can't just import 'bidi' now, because it needs to be
+  % imported after a bunch of other stuff in the template.
+  \renewcommand{\maketitle}{\fhisotitle}%
+  % The default pandoc template defines and invokes \tightlist on all
+  % lists (enumerate, itemize, description).  We'd rather configure
+  % these ourselves using the enumitem package.
+  \renewcommand{\tightlist}{}%
+}
 
 % Remove extra separation around verbatim text
 \usepackage{etoolbox}
@@ -145,3 +166,13 @@
 % Prevent widows and orphans.  (Note the default is 150.)
 \widowpenalty=10000
 \clubpenalty=10000
+
+%\usepackage{hyperref}
+%\hypersetup{colorlinks=true,urlcolor=blue,linkcolor=blue}
+
+% Prevent bidi (v19.6) from putting numbers followed by a period backwards.
+\AtBeginDocument{\@Latintrue}
+
+% Left-align all longtable environments (used by pandoc simple_table)
+\usepackage{longtable}
+\setlength{\LTleft}{2em}  % 2em is the same as the note/example/ednote box
