--- a/main/README
+++ b/main/README
@@ -1,2 +1,3 @@
-This directory contains configuration from the main FHISO website and
-code to update it.
+This directory contains configuration for the main FHISO website and
+code to update it.  It also contains code to upload governance PDFs to 
+the main site.
