--- a/fhiso.sty
+++ b/fhiso.sty
@@ -77,6 +77,7 @@
 \setlist[itemize]{noitemsep, topsep=0pt, itemsep=0pt, parsep=0pt, label=---}
 \setlist[enumerate]{noitemsep, topsep=0pt, itemsep=0pt, parsep=0pt}
 \setlist[description]{style=nextline, topsep=0pt, itemsep=0.5em, parsep=0pt}
+% Add leftmargin=2em to description to get narrower indents
 
 \newcommand{\subtitle}[1]{%
   \def\@subtitle{#1}%
